--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "webpack-modernizr-loader": "^5.0.0"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "lodash": "^4.17.20",
     "normalize.css": "^8.0.1"
   }
